<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        app:showAsAction="always" />

    <item
        android:id="@+id/records"
        android:icon="@drawable/ic_baseline_format_list_24"
        android:title="@string/records"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"
        app:showAsAction="always" />
</menu>