<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/back"
    tools:context=".presentation.fragment.RegistrationFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="507dp"
        android:fontFamily="@font/banty_bold"
        android:text="@string/feedthecat"
        android:textColor="@color/purple_700"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/Email"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <Button
        android:id="@+id/Login"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_700"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/Registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/Registration"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="70dp"
        android:background="@color/purple_700"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

</androidx.constraintlayout.widget.ConstraintLayout>